# Tic-tac-toe

./: CMakeLists.txt  README.md
include/: Board.h  BoardTest.h  StdioBoardView.h  Test.h
src/: Board.cpp  StdioBoardView.cpp  main.cpp
test/: BoardTest.cpp  test.cpp
